--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sony event",
+  "name": "sony_event",
   "version": "0.0.0",
   "description": "api with sqllite",
   "main": "server.js",
   "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
+  "author": "hchenghao@gmail.com",
   "dependencies": {
     "async": "~0.2.8",
     "express": "~3.2.4",
